# Empirical-Study-LLM-MR

./: .gitignore  LICENSE  README.md  TODO.md
scripts/: LOC_counter.py  README.md  chat.py  extract_code.py  gpt3.5turbo.md  prompt.md  requirements.txt  resume_chat.py  run-linux.sh  run-win.bat  run.bat
scripts/data/demo/: demo.ACMS.md  demo.Boyer.md  demo.Bsearch1.md  demo.Bsearch2.md  demo.CUBS.md  demo.ClosestPair.md  demo.Determinant1.md  demo.DistinctSubsequence.md  demo.ERS.md  demo.Editingdistance.md  demo.FastJson.md  demo.FirstMissingPositive.md  demo.HeapSort.md  demo.InterleavingString.md  demo.JAMA.md  demo.Jodatime.md  demo.Klp.md  demo.Lucene.md  demo.MOS.md  demo.MaxRectangle.md  demo.Maxsub.md  demo.Multi-MAXSUM.md  demo.Printtokens.md  demo.Printtokens2.md  demo.QuickSort.md  demo.RSA.md  demo.Spwiki.md  demo.Superstring.md  demo.SurroundedRegion.md  demo.TCAS.md  demo.Trisquarej.md  demo.f_oneway.md  demo.grep.md  demo.rotate.md  demo.schedule.md  demo.schedule2.md  demo.shortest_path.md
scripts/data/specification/: specification.ACMS.md  specification.Boyer.md  specification.Bsearch1.md  specification.Bsearch2.md  specification.CUBS.md  specification.ClosestPair.md  specification.Determinant1.md  specification.DistinctSubsequence.md  specification.ERS.md  specification.Editingdistance.md  specification.FastJson.md  specification.FirstMissingPositive.md  specification.HeapSort.md  specification.InterleavingString.md  specification.JAMA.md  specification.Jodatime.md  specification.Klp.md  specification.Lucene.md  specification.MOS.md  specification.MaxRectangle.md  specification.Maxsub.md  specification.Multi-MAXSUM.md  specification.Printtokens.md  specification.Printtokens2.md  (+13 more)
scripts/experimental/: MRJudgement.py  draw_plots.py  excel2csv.py  prompt.md
software-under-test/: README.md
software-under-test/Bsearch1/: README.md  run.sh
software-under-test/Bsearch1/test/: CMakeLists.txt  GPT3D5Test.cpp  GPT3P5Test.cpp  GPT4Test.cpp  exampleTest.cpp  tmain.cpp  utils.cpp  utils.h
software-under-test/Bsearch2/: README.md  run.sh
software-under-test/ClosestPair/: README.md  run.sh
software-under-test/ClosestPair/test/: CMakeLists.txt  GPT3D5Test.cpp  GPT4Test.cpp  exampleTest.cpp  utils.cpp  utils.h
software-under-test/DistinctSubsequence/: README.md  run.sh
software-under-test/Editingdistance/: README.md  run.sh
software-under-test/Editingdistance/test/: CMakeLists.txt  GPT3D5Test.cpp  GPT4Test.cpp  exampleTest.cpp  utils.cpp  utils.h
software-under-test/FirstMissingPositive/: README.md  run.sh
software-under-test/HeapSort/: README.md  run.sh
software-under-test/InterleavingString/: README.md  run.sh
software-under-test/Klp/: README.md  run.sh
software-under-test/Multi-MAXSUM/: README.md  run.sh
software-under-test/Printtokens/: README.md  requirements.txt
software-under-test/Printtokens2/: README.md
software-under-test/QuickSort/: README.md  run.sh
software-under-test/QuickSort/test/: CMakeLists.txt  GPT3D5Test.cpp  GPT3D5TestNew.cpp  GPT3D5Test_nospec.cpp  GPT3D5Test_nosystem.cpp  GPT4Test.cpp  GPT4Test_nospec.cpp  GPT4Test_nosystem.cpp  exampleTest.cpp  utils.cpp  utils.h
software-under-test/RSA/: README.md  run.sh
software-under-test/Spwiki/: README.md  run.sh
software-under-test/Spwiki/test/: CMakeLists.txt  GPT3D5Test.cpp  GPT3D5TestNew.cpp  GPT4Test.cpp  exampleTest.cpp  utils.cpp  utils.h
software-under-test/SurroundedRegion/: CMakeLists.txt  README.md  run.sh
software-under-test/TCAS/: README.md
software-under-test/f_oneway/: README.md  TODO  requirements.txt  run.sh
software-under-test/grep/: README.md  requirements.txt  run.sh
software-under-test/rotate/: README.md  requirements.txt  run.sh
software-under-test/schedule/: README.md  run.sh
software-under-test/schedule2/: README.md
software-under-test/shortest_path/: README.md  requirements.txt  run.sh
system-under-test/ACMS/: AirlinesBaggageBillingService.java
system-under-test/Boyer/: BoyerTestExample.java  BoyerTestGPT.java  chat_gpt3.5.md  prompt.md
system-under-test/Bsearch1/: CMakeLists.txt  README.md  chat_gpt3.5.md  function.h  main.cpp
system-under-test/Bsearch2/: CMakeLists.txt  function.h
system-under-test/CUBS/: BillCalculation.java
system-under-test/ClosestPair/: function.h  main.cpp
system-under-test/Editingdistance/: function.h
system-under-test/FirstMissingPositive/: function.h
system-under-test/HeapSort/: function.h
system-under-test/InterleavingString/: function.h
system-under-test/MOS/: MSR.java
system-under-test/Multi-MAXSUM/: function.h
system-under-test/Printtoken/: Makefile
system-under-test/Printtokens2/: Makefile
system-under-test/QuickSort/: function.h
system-under-test/RSA/: function.h
system-under-test/Spwiki/: function.h
system-under-test/SurroundedRegion/: function.h
system-under-test/TCAS/: README.md
system-under-test/f_oneway/: README.md
system-under-test/grep/: README.md
system-under-test/rotate/: README.md
system-under-test/schedule/: main.c
system-under-test/shortest_path/: README.md  requirements.txt
(+1300 files in other folders)
